<resources>
    <string name="app_name">RemindMe</string>
    <string name="email_developer">alexeyermolovich@gmail.com</string>

    <string name="menu_search">Search</string>

    <string name="menu_item_notification">Notifications</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <!-- Tabs-->
    <string name="tab_item_history">History</string>
    <string name="tab_item_ideas">Ideas</string>
    <string name="tab_item_todo">TODO</string>
    <string name="tab_item_birthdays">Birthdays</string>
    <!---->

    <!-- Popup menu items-->
    <string name="listview_item_menu_delete">Delete</string>
    <string name="listview_item_menu_revise">Revise</string>
    <!---->

    <!-- Button dialog-->
    <string name="button_add">Add</string>
    <string name="button_revise">Revise</string>
    <string name="button_cancel">Cancel</string>
    <!---->

    <!-- Exception-->
    <string name="exception_unfinished_business">Finish filling data</string>
    <string name="exception_not_fill_fields">You did not fill in all fields!</string>
    <string name="exception_not_found_idea">Add a idea by clicking on the plus</string>
    <string name="exception_not_found_todo">Add a todo by clicking on the plus</string>
    <string name="exception_not_found_birthday">Add a birthday by clicking on the plus</string>
    <string name="exception_search_not_found">No search results</string>
    <!-- -->

    <!-- Idea-->
    <string name="ideas_add">New Idea</string>
    <string name="ideas_revise">Revise Idea</string>

    <string name="header">Header</string>
    <string name="idea">Idea</string>
    <string name="keyword">Keyword</string>
    <!-- -->

    <!-- To do-->
    <string name="todo_add">New ToDo</string>
    <string name="todo_revise">Revise ToDo</string>

    <string name="todo">ToDo</string>

    <!---->

    <!--Birthday -->
    <string name="birthdays_add">New Birthday</string>
    <string name="birthdays_revise">Revise Birthday</string>

    <string name="first_name">First Name</string>
    <string name="large_name">Large Name</string>
    <string name="birthday">Birthday</string>
    <string name="relationship">Relationship</string>

    <string-array name="relationship_items">
        <item>My</item>
        <item>Family</item>
        <item>Business</item>
        <item>Friend</item>
        <item>Familiar</item>
    </string-array>
    <!---->

    <string name="congratulation">Today is Birthdays </string>
    <string name="notification">Do not forget to congratulate.</string>

</resources>
